[gd_scene load_steps=4 format=3 uid="uid://csbyooducq2gi"]

[ext_resource type="Script" path="res://scenes/StargazingAreas/stargazingarea.gd" id="1_pdxb3"]
[ext_resource type="Texture2D" uid="uid://cus1sukowu7hn" path="res://assets/ParallaxBackgrounds/parallaxforegrounds/parallaxbg_cloud1.PNG" id="1_pu4g2"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_fqgnh"]
height = 10.0
radius = 20.0

[node name="StargazingArea" type="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.62455, 0)
collision_layer = 0
collision_mask = 4
script = ExtResource("1_pdxb3")
star_name = "Enchanted Star"
random_value = 10000

[node name="Sprite3D" type="Sprite3D" parent="."]
texture = ExtResource("1_pu4g2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CylinderShape3D_fqgnh")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
